Update .env template

--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,11 @@
-PORT=
+#Generate an .env file, and paste the following variables. Fill the missing fields with your personalized credentials. You can also modify the predefined ones.
+
+PORT=3000
+MONGO_URL=mongodb://root:example@localhost:27017/
+MONGO_URL_DOCKER=mongodb://root:example@mongo
+MAIL_SECRET_KEY=
+MAIL_SERVICE=gmail
+MAIL_USER=
+MAPBOX_ACCESS_TOKEN=
+
+
